syntax = "proto3";
package spec;


message MessageFieldMessage {

    TestMessage message_field = 1;

    repeated TestMessage repeated_message_field = 2;


    message TestMessage {
        string name = 1;
    }

}

